--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "nanoid": "^3.1.25",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-get-random-values": "^1.7.0",
+    "react-native-paper": "^4.9.2",
+    "react-native-snackbar": "^2.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
